fix: extra space in paragraph, incorrect rendering

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -34,7 +34,6 @@ h6 { font-size: 14px; margin-bottom: 12px; }
 
 p {
     line-height: 1.8;
-    margin: 0 0 30px;
 }
 
 a {
